<resources>
    <string name="app_name">Event Registration</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_item_parameters">Parameters</string>
    <string name="menu_item_airplane">Airplane Mode</string>
    <string name="menu_item_exit">exit</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_ringtone_silent">Silent</string>

    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_other">Other</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">its an academic project developed by Oussema Metoui, peace!!</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="title_about">About Author</string>
    <string name="url_about">https://www.linkedin.com/in/oussema-metoui/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_event_capacity">Event Capacity</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on detected QR</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_event_capacity">key_event_capacity</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
</resources>